fixed jumbotron text spacing and font size

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31,40 +31,37 @@ a:hover {
     background-image: url('/img/DSC_0006.jpg');
 }
 
+.jumbo-text {
+    text-shadow: 0.25rem 0.05rem 0.1rem rgba(0, 0, 0, 1);
+}
+
 @media (min-width: 0px) {
     .jumbo-text {
         font-size: 2rem;
-        text-shadow: 0.1rem 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
-        text-align: center;
     }
 }
 
 @media (min-width: 576px) {
     .jumbo-text {
         font-size: 5rem;
-        text-shadow: 0.1rem 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
-        text-align: left;
     }
 }
 
 @media (min-width: 768px) {
     .jumbo-text {
-        font-size: 5rem;
-        text-shadow: 0.1rem 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
+        font-size: 6rem;
     }
 }
 
 @media (min-width: 992px) {
     .jumbo-text {
         font-size: 6rem;
-        text-shadow: 0.1rem 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
     }
 }
 
 @media (min-width: 1200px) {
     .jumbo-text {
         font-size: 5rem;
-        text-shadow: 0.1rem 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
     }
 }
 
